namespaces/live.cloud-platform.service.justice.gov.uk/record-a-goose-exercise/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: record-a-goose-exercise
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "accessibility"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Accessibility: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/record-a-goose-exercise"
    cloud-platform.justice.gov.uk/team-name: "accessibility-resources-admin"
    cloud-platform.justice.gov.uk/review-after: ""
